# utem-fileage-app

./: .gitignore  README.md
app/: CodeBlocks.cbp  CodeBlocks.depend  CodeBlocks.layout  Edad.cpp  Edad.h  Makefile  main.cpp  meson.build  simple.cpp
app/nbproject/: configurations.xml  project.xml
app/nbproject/private/: Default.properties  configurations.xml  private.xml
